<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E0E0E0"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="https://"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColorHint="@color/hint_text_light" />

        <TextView
            android:id="@+id/tv_multiple_links"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/multiple_links"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:text="@string/clear"
            android:textColor="@color/primary_text_light"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:text="@string/apply"
            android:textColor="@color/primary_text_light"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>