<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/isPublicLabel"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:focusable="false"
                android:text="@string/public_note" />

            <Switch
                android:id="@+id/sw_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <include layout="@layout/divider" />

        <LinearLayout
            android:id="@+id/ll_notebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/notebookLabel"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:text="@string/notebook" />

            <TextView
                android:id="@+id/tv_notebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="abc"
                android:textColor="#999" />

        </LinearLayout>

        <include layout="@layout/divider" />

        <TextView
            android:id="@+id/tagsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags" />

        <EditText
            android:id="@+id/et_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textAutoCorrect" />

    </LinearLayout>
</ScrollView>
